--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin: 0 160px;
 }
 .nav-title {
     color: var(--Dark-01, #181818);
@@ -35,5 +36,16 @@ nav a {
     font-size: 20px;
     font-weight: 700;
     padding: 18px 35px;
-
+}
+/*header style*/
+.header {
+    background: #FFF8F3;
+}
+.banner {
+    padding: 30px 30px 30px 150px;
+    display: flex;
+    align-items: center;
+}
+.banner .profile {
+    width: 500px;
 }
