--- a/style.css
+++ b/style.css
@@ -40,12 +40,48 @@ nav a {
 /*header style*/
 .header {
     background: #FFF8F3;
+    background-image: url(./images/header_bg.png);
+    background-repeat: no-repeat;
+    background-position: bottom right;
+
 }
 .banner {
-    padding: 30px 30px 30px 150px;
+    padding: 30px 30px 0px 150px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
+}
+.banner-content {
+    width: 550px;
 }
 .banner .profile {
     width: 500px;
+}
+.banner .banner-greet {
+    font-size: 35px;
+    color: #474747;
+    margin-bottom: 0;
+}
+.banner .banner-title {
+    font-size: 65px;
+    margin-top: 05px;
+    margin-bottom: 20px;
+}
+.about {
+    margin-top: 130px;
+    padding: 130px;
+    border-radius: 10px;
+    background: #FFF8F3;
+}
+.section-title{
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-style: normal;
+    font-weight: 700;
+}
+.about-content {
+    color: var#757575;
+    text-align: center;
+    font-size: 18px;
 }
